Tests/Runtime2/Error/InHandler/.build/badhandler.pr
{
  "name": "BadHandler",
  "description": "No goal was provided. Please send the %goalForLlm% content (or describe the task you want completed) so I can generate the required JSON plan.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022handler error\u0022",
      "lineNumber": 3,
      "indent": 0,
      "comment": "this handler also throws",
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "handler error",
              "type": "string"
            }
          ],
          "defaults": null
        }
      ],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Tests/Runtime2/Error/InHandler/BadHandler.goal",
  "prPath": "/Tests/Runtime2/Error/InHandler/.build/badhandler.pr",
  "hash": "4a219d8c94d25f14b8b0a5c33a9b4ae0aa0948114da0df9b0ac04a0d7e9cbbe8",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}